--- a/index.html
+++ b/index.html
@@ -107,20 +107,21 @@
          </div>
          <div id="skills">
             <div data-aos="fade-up" class="box">
-               <img class="certificate" src="HTML.png" alt="" width="300px">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/HTML.png?v=1670863705958" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
-               <img class="certificate" src="Bootstrap.png" alt="" width="300px">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Bootstrap.png?v=1670863666404" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
-               <img class="certificate" src="Figma.png" alt="" width="300px">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Figma.png?v=1670863685251" alt="" width="300px">
             </div>
          </div>
       </div>
+     
       <!-- about me -->
       <div class="about-title" data-aos="fade-down">
          <div class="line"></div>
-         <h1> <img src="heartRemov.png" alt="" width="50"> about me </h1>
+         <h1> <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/heartRemov.png?v=1670863702167" alt="" width="50"> about me </h1>
          <div class="line"></div>
       </div>
       <div class="containerAboutMe">
@@ -138,7 +139,7 @@
          <div class="image-container">
             <div class="projects_card">
                <div class="image">
-                  <img src="Skiper.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Skiper.jpg?v=1670863732446" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Landing page</p>
@@ -154,7 +155,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="cake.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/cake.jpg?v=1670863669327" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Landing page</p>
@@ -170,7 +171,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="wine.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/wine.jpg?v=1670863756258" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Landing page</p>
@@ -186,7 +187,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="quiz.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/quiz.jpg?v=1670863725114" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Quiz game</p>
@@ -202,7 +203,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="christmas.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/christmas.jpg?v=1670863681509" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Countdown app</p>
@@ -218,7 +219,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="slide2.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/slide2.jpg?v=1670863741919" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Slide app</p>
@@ -234,7 +235,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="todolist.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/todolist.jpg?v=1670863745723" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">ToDoList app</p>
@@ -250,7 +251,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="weather.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/weather.jpg?v=1670863752101" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Weather app</p>
@@ -266,7 +267,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="magicBall.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/magicBall.jpg?v=1670863709630" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Magic Ball app</p>
@@ -280,7 +281,8 @@
                </div>
             </div>
             <div class="projects_card">
-            <div class="image"><img src="game.jpg" alt="cover">
+            <div class="image">
+            <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/game.jpg?v=1670863688188" alt="cover">
             <div class="projects__modal">
             <div>
             <p class="projects__subtitle">Game app</p>
@@ -296,7 +298,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="meditation.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/meditation.jpg?v=1670863720571" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Meditation app</p>
@@ -312,7 +314,7 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="search.jpg" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/search.jpg?v=1670863728864" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Recipes search app</p>
