📻🌔 Checkpoint ./style.css:45105987/169 ./index.html:45105987/17

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
       <div class="containerAboutMe">
          <p class="parAboutMe">Hi there! My name is Marina, I am a web developer from Montenegro.
-            <br>I am currently learning React, Redux, Node. I try to make my projects
+            <br>I am currently learning React, Redux and Node. I try to make my projects
             <br> interesting and advanced, and for this I am constantly expanding 
             <br>my knowledge. And I really love what I do!
          </p>
