--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Makarova Marina</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
       <link rel="stylesheet" href="aos.css">
       <link rel="stylesheet" href="style.css">
@@ -85,10 +85,13 @@
                      boxes">CSS-3</span> <span class="js 
                      boxes">JavaScript</span> <span class="react 
                      boxes">React</span></p>
-                  <p> <span class="languages">Libraries & frameworks:</span> <span class="bstrap 
-                     boxes">Bootstrap5</span>  <span class="gsap 
-                     boxes">GSAP</span>  <span class="figma 
-                     boxes">Figma</span> </p>
+                  <p> <span class="languages">Libraries & frameworks:</span> 
+                    <span class="bstrap boxes">Redux</span>
+                    <span class="bstrap boxes">NodeJS</span>
+                    <span class="bstrap boxes">Bootstrap5</span>  
+                    <span class="gsap boxes">GSAP</span>  
+                    <span class="figma boxes">Figma</span> 
+                 </p>
                </div>
             </div>
          </div>
@@ -106,8 +109,11 @@
             <div class="line"></div>
          </div>
          <div id="skills">
-            <div data-aos="fade-up" class="box">
+           <div data-aos="fade-up" class="box">
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/HTML.png?v=1670863705958" alt="" width="300px">
+            </div>
+            <div data-aos="fade-up" class="box">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/JavaScript.jpg?v=1671554477566" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Bootstrap.png?v=1670863666404" alt="" width="300px">
