--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
             <h3 class="heading"> PORTFOLIO</h3>
          </div>
          <div class="image-container">
+           <div class="projects_card">
+               <div class="image">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/resort.jpg?v=1673204322081" alt="cover">
+                  <div class="projects__modal">
+                     <div>
+                        <p class="projects__subtitle">Resort app</p>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
+                        <div class="link">
+                           <a href="https://montenegro-resorts-mmarakesh.netlify.app" class="button__small">
+                           <i class="bx bx-link"></i>View
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
             <div class="projects_card">
                <div class="image">
                   <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Skiper.jpg?v=1670863732446" alt="cover">
