--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <p class="projects__subtitle">Resort app</p>
                         <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
                         <div class="link">
-                           <a href="https://montenegro-resorts-mmarakesh.netlify.app" class="button__small">
+                           <a href="https://montenegro-resorts-mmarakesh.netlify.app" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
@@ -167,7 +167,7 @@
                         <p class="projects__subtitle">Landing page</p>
                         <h4 class="projects__title">HTML5/CSS3/Gsap</h4>
                         <div class="link">
-                           <a href="https://fishermans-project-me.glitch.me" class="button__small">
+                           <a href="https://fishermans-project-me.glitch.me" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
