🍩🍔 Checkpoint ./index.html:45105987/1023 ./.glitch-assets:45105987/378

--- a/index.html
+++ b/index.html
@@ -145,6 +145,22 @@
          <div class="image-container">
            <div class="projects_card">
                <div class="image">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/recipe.jpg?v=1675366670940" alt="cover">
+                  <div class="projects__modal">
+                     <div>
+                        <p class="projects__subtitle">Recipe search</p>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
+                        <div class="link">
+                           <a href="https://cosmetics-store-mmarakesh.netlify.app/" class="button__small" target="_blank">
+                           <i class="bx bx-link"></i>View
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+           <div class="projects_card">
+               <div class="image">
                   <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/LookAtMe.jpg?v=1674238718283" alt="cover">
                   <div class="projects__modal">
                      <div>
