--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Recipe search</p>
-                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React/API</h4>
                         <div class="link">
-                           <a href="https://cosmetics-store-mmarakesh.netlify.app/" class="button__small" target="_blank">
+                           <a href="https://github.com/mmarakesh/recipes-search" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
