🕵🍴 Checkpoint ./.glitch-assets:45105987/394 ./index.html:45105987/271

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
          <div class="image-container">
            <div class="projects_card">
                <div class="image">
-                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/recipe.jpg?v=1675366670940" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/recipe%20(2).jpg?v=1675904045538" alt="cover">
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Recipe search</p>
                         <h4 class="projects__title">HTML5/CSS3/JS/React/API</h4>
                         <div class="link">
-                           <a href="https://github.com/mmarakesh/recipes-search" class="button__small" target="_blank">
+                           <a href="https://recipe-search-mmarakesh.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
