--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
             </div>
             <div class="projects_card">
                <div class="image">
-                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Skiper.jpg?v=1670863732446" alt="cover">
+                  <img src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/phuket.jpg?v=1697658250075" alt="cover">
                   <div class="projects__modal">
                      <div>
-                        <p class="projects__subtitle">Landing page</p>
-                        <h4 class="projects__title">HTML5/CSS3/Gsap</h4>
+                        <p class="projects__subtitle">Websites</p>
+                        <h4 class="projects__title">React</h4>
                         <div class="link">
-                           <a href="https://fishermans-project-me.glitch.me" class="button__small" target="_blank">
+                           <a href="https://thai-developer-company.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
