--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Recipe search</p>
-                        <h4 class="projects__title">HTML5/CSS3/JS/React/API</h4>
+                        <h4 class="projects__title">React/API</h4>
                         <div class="link">
                            <a href="https://recipe-search-mmarakesh.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
@@ -165,7 +165,7 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Сosmetics store</p>
-                        <h4 class="projects__title">HTML5/CSS3/JS/React/Redux</h4>
+                        <h4 class="projects__title">React/Redux</h4>
                         <div class="link">
                            <a href="https://look-at-me-store.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
@@ -181,7 +181,7 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Resort app</p>
-                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
+                        <h4 class="projects__title">React</h4>
                         <div class="link">
                            <a href="https://montenegro-resorts-mmarakesh.netlify.app" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
