--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/JavaScript.jpg?v=1671554477566" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/React.png?v=1711194895023" alt="" width="300px">
+            </div>
+            <div data-aos="fade-up" class="box">
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Bootstrap.png?v=1670863666404" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
@@ -149,7 +152,7 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Recipe search</p>
-                        <h4 class="projects__title">React/API</h4>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React/API</h4>
                         <div class="link">
                            <a href="https://recipe-search-mmarakesh.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
@@ -165,9 +168,9 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Сosmetics store</p>
-                        <h4 class="projects__title">React/Redux</h4>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
                         <div class="link">
-                           <a href="https://look-at-me-store.netlify.app/" class="button__small" target="_blank">
+                           <a href="https://cosmetics-store-mmarakesh.netlify.app/" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
                            </a>
                         </div>
@@ -181,7 +184,7 @@
                   <div class="projects__modal">
                      <div>
                         <p class="projects__subtitle">Resort app</p>
-                        <h4 class="projects__title">React</h4>
+                        <h4 class="projects__title">HTML5/CSS3/JS/React</h4>
                         <div class="link">
                            <a href="https://montenegro-resorts-mmarakesh.netlify.app" class="button__small" target="_blank">
                            <i class="bx bx-link"></i>View
