--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/React.png?v=1711194895023" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
+               <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Node.js.jpg?v=1719038225263" alt="" width="300px">
+            </div>
+            <div data-aos="fade-up" class="box">
                <img class="certificate" src="https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/Bootstrap.png?v=1670863666404" alt="" width="300px">
             </div>
             <div data-aos="fade-up" class="box">
