--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
          </div>
       </section>
       <footer>
-         <div class="about-title-footer">
+         <div class="about-title">
            <a href="https://clustrmaps.com/site/1c07z"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=cEzHEj2yTwCtQqDjyW_mxeCr98qx0kWAV4hS5p7W_kU&cl=ffffff" /></a>
-            <p class="par-footer">created by Marina Makarova 2022</p>
+            <p class="par">created by Marina Makarova 2022</p>
          </div>
       </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
